Complete signup flow
- Perform client and server-side validation of user information
- Store hashed passwords in DB using strong encryption
